--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mern-auth-backend": "file:",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "openai": "^5.17.0"
   },
   "description": "",
   "devDependencies": {
