--- a/package.json
+++ b/package.json
@@ -22,8 +22,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dompurify": "^3.2.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "mern-auth-backend": "file:",
     "mongoose": "^8.8.3",
@@ -31,6 +36,7 @@
   },
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.1.0"
